<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/link_fragment"
    android:layout_width="match_parent"
    android:background="@color/grey_bg"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:progressTint="@color/buttonColor"
            android:visibility="gone" />

        <TextView
            android:id="@+id/wishTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_morning"
            android:fontFamily="@font/figtree_regular"
            android:textColor="@color/wish"
            android:textSize="16sp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:fontFamily="@font/figtree_semi_bold"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:drawablePadding="8dp"
            app:drawableEndCompat="@drawable/ic_hi"
            android:layout_marginBottom="24dp"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="200dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"
                        android:fontFamily="@font/figtree_regular"
                        android:textColor="@color/wish"
                        android:textSize="14sp"/>
                </LinearLayout>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/graph"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:cardElevation="0dp"
                    android:background="@color/white"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/ic_click"
                            android:contentDescription="@string/today_s_clicks"/>

                        <TextView
                            android:id="@+id/todayClicks"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_0"
                            android:fontFamily="@font/figtree_semi_bold"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:layout_marginTop="12dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/today_s_clicks"
                            android:textColor="@color/wish"
                            android:textSize="14sp"
                            android:fontFamily="@font/figtree_regular"
                            android:layout_marginTop="4dp"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@color/white"
                    android:layout_marginEnd="16dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/ic_location"

                            android:contentDescription="@string/today_s_clicks"/>

                        <TextView
                            android:id="@+id/topLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/na"
                            android:fontFamily="@font/figtree_semi_bold"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:layout_marginTop="12dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/top_location"
                            android:fontFamily="@font/figtree_regular"
                            android:textColor="@color/wish"
                            android:textSize="14sp"
                            android:layout_marginTop="4dp"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@color/white"
                    android:layout_marginEnd="16dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/ic_web"
                            android:contentDescription="@string/today_s_clicks"/>

                        <TextView
                            android:id="@+id/topSource"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/na"
                            android:fontFamily="@font/figtree_semi_bold"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/top_sources"
                            android:fontFamily="@font/figtree_regular"
                            android:textColor="@color/wish"
                            android:textSize="14sp"
                            android:layout_marginTop="4dp"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="120dp"
                    app:cardElevation="0dp"
                    android:layout_height="120dp"
                    android:background="@color/white"
                    app:cardCornerRadius="8dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:src="@drawable/ic_best_time"
                            android:contentDescription="@string/today_s_clicks"/>

                        <TextView
                            android:id="@+id/bestTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/na"
                            android:fontFamily="@font/figtree_semi_bold"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:layout_marginTop="12dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/best_time"
                            android:fontFamily="@font/figtree_regular"
                            android:textColor="@color/wish"
                            android:textSize="14sp"
                            android:layout_marginTop="4dp"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/viewAnalytics"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            android:background="@drawable/custom_button_view_analytics"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/view_analytics"
                android:fontFamily="@font/figtree_semi_bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:drawablePadding="12dp"
                app:drawableStartCompat="@drawable/ic_trend"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginBottom="28dp">

            <TextView
                android:id="@+id/topLinks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_links"
                android:textSize="16sp"
                android:fontFamily="@font/figtree_semi_bold"
                android:background="@drawable/custom_tab_indicator"
                android:textColor="@color/white"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp" />

            <TextView
                android:id="@+id/recentLinks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent_links"
                android:fontFamily="@font/figtree_semi_bold"
                android:textSize="16sp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="6dp"
                android:layout_marginStart="8dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:contentDescription="@string/search_links"
                android:src="@drawable/ic_search" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:id="@+id/viewAllLinks"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="40dp"
            android:background="@drawable/custom_button_view_analytics"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/view_links"
                android:fontFamily="@font/figtree_semi_bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:drawablePadding="12dp"
                app:drawableStartCompat="@drawable/ic_view_links"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/talkWithUs"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="start|center"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_button_talk_to_us"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/talk_us"
                android:fontFamily="@font/figtree_semi_bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:drawablePadding="12dp"
                android:layout_marginStart="12dp"
                app:drawableStartCompat="@drawable/ic_whatsapp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/faq"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="start|center"
            android:orientation="horizontal"
            android:layout_marginBottom="150dp"
            android:background="@drawable/custom_button_faq"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/faq"
                android:fontFamily="@font/figtree_semi_bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginStart="12dp"
                android:drawablePadding="12dp"
                app:drawableStartCompat="@drawable/ic_faq"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
