<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.OpeninApp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/buttonColor">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/buttonColor">

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:text="@string/dashboard"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/averta_std_semibold"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/settingsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_setting"
                android:layout_gravity="end"
                android:padding="4dp"
                android:contentDescription="@string/setting" />
        </com.google.android.material.appbar.MaterialToolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:background="@drawable/curve"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.fragment.app.FragmentContainerView

        android:id="@+id/fragmentContainerView"
        android:layout_marginTop="100dp"
        android:name="com.app.openinapp.ui.fragment.MainFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/fragment_main" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:layout_gravity="bottom"
        app:fabAnchorMode="cradle"
        app:contentInsetStart="0dp"
        app:backgroundTint="@color/white"
        app:fabCradleRoundedCornerRadius="12dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_app_bar" />
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add"
        app:backgroundTint="@color/buttonColor"
        android:foreground="@drawable/ic_add"
        android:foregroundGravity="center"
        app:layout_anchor="@id/nav_bar"
        tools:ignore="UnusedAttribute" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>